Fix Bluedevil crashes when logging in with bluetooth controller disabled

BUG: 268670